--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd ../.. && pnpm turbo build --filter=web",
+  "buildCommand": "cd ../.. && pnpm install && pnpm turbo build --filter=@unifiedstay/web",
+  "installCommand": "cd ../.. && pnpm install",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
