--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,12 +7,14 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "noEmit": false,
+    "noImplicitAny": false,
+    "strict": false,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
 
